--- a/CardManagementSDKSwiftSample/CardManagementSDKSwiftSample/Settings.plist
+++ b/CardManagementSDKSwiftSample/CardManagementSDKSwiftSample/Settings.plist
@@ -2,24 +2,32 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CardView</key>
+    <key>CardView</key>
 	<dict>
 		<key>cardIdentifier</key>
 		<dict>
 			<key>Id</key>
-			<string>52913582188097343008</string>
+			<string>40545400190652222937</string>
 			<key>type</key>
 			<string>EXID</string>
 		</dict>
 		<key>connection</key>
 		<dict>
 			<key>baseUrl</key>
-			<string>https://apitest.network.ae</string>
-			<key>token</key>
-			<string>g73mxhy9q6m7t2g37xmxhxur</string>
+			<string>https://api-uat.ksa.network.global/sdk/v2</string>
 			<key>bankCode</key>
-			<string>EAND</string>
+			<string>CROAT</string>
 		</dict>
+        <key>credentials</key>
+        <dict>
+            <key>tokenUrl</key>
+            <string>https://api-uat.ksa.network.global/v1/tokenkc/generate</string>
+            <key>clientSecret</key>
+            <string>jrDEfTbZpQABWxm598SfWTGBTp34oeMg</string>
+            <key>clientId</key>
+            <string>fa0b5a63-7222-4e82-a047-47e2ef6657ef31</string>
+        </dict>
+
 	</dict>
 </dict>
 </plist>
