--- a/CardManagementSDKSwiftSample/CardManagementSDKSwiftSample/Settings.plist
+++ b/CardManagementSDKSwiftSample/CardManagementSDKSwiftSample/Settings.plist
@@ -2,32 +2,31 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CardView</key>
+	<key>CardView</key>
 	<dict>
 		<key>cardIdentifier</key>
 		<dict>
 			<key>Id</key>
-			<string>40545400190652222937</string>
+			<string>52913582188097343008</string>
 			<key>type</key>
 			<string>EXID</string>
 		</dict>
 		<key>connection</key>
 		<dict>
 			<key>baseUrl</key>
-			<string>https://api-uat.ksa.network.global/sdk/v2</string>
+			<string>https://apitest.network.ae</string>
 			<key>bankCode</key>
-			<string>CROAT</string>
+			<string>EAND</string>
 		</dict>
-        <key>credentials</key>
-        <dict>
-            <key>tokenUrl</key>
-            <string>https://api-uat.ksa.network.global/v1/tokenkc/generate</string>
-            <key>clientSecret</key>
-            <string>jrDEfTbZpQABWxm598SfWTGBTp34oeMg</string>
-            <key>clientId</key>
-            <string>fa0b5a63-7222-4e82-a047-47e2ef6657ef31</string>
-        </dict>
-
+		<key>credentials</key>
+		<dict>
+			<key>tokenUrl</key>
+			<string>https://apitest.network.ae/CardServices/v2/Token</string>
+			<key>clientSecret</key>
+			<string>hnCqJYwuzt</string>
+			<key>clientId</key>
+			<string>6rxqcbjuejesgw95htm4r3vg</string>
+		</dict>
 	</dict>
 </dict>
 </plist>
