--- a/CardManagementSDKSwiftSample/Podfile
+++ b/CardManagementSDKSwiftSample/Podfile
@@ -4,6 +4,6 @@ target 'CardManagementSDKSwiftSample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'NICardManagementSDK', '~> 1.0'
-
+  pod 'NICardManagementSDK', '1.0.15-alpha.1'
+  #pod 'NICardManagementSDK', :path => '~/Documents/projects/card-management-sdk-ios'
 end
